--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -57,6 +57,7 @@
 }
 .header {
   padding-top: calc(173px - 44px);
+  padding-bottom: 328px;
   &-wrap {
     display: flex;
     justify-content: center;
