add container padding

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,9 @@ span {
     padding: 0;
     margin: 0;
 }
-
+.container-fluid {
+    padding-left: 40px;
+    padding-right: 40px;
+}
 @import 'blocks/header';
 @import 'blocks/exp';
