--- a/src/sass/blocks/_exp.scss
+++ b/src/sass/blocks/_exp.scss
@@ -3,11 +3,11 @@
   padding-bottom: 197px;
   &-wrap {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
   &-text {
-
+    margin-right: 190px;
   }
   &-image {
     img {
