--- a/src/sass/blocks/_exp.scss
+++ b/src/sass/blocks/_exp.scss
@@ -8,12 +8,19 @@
     align-items: center;
   }
   &-text {
-    margin-right: 190px;
+    max-width: 686px;
   }
   &-image {
     img {
-
+      max-width: 670px;
     }
+  }
+  &-block {
+    max-width: 1360px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   &-title {
     font-weight: 600;
@@ -22,8 +29,9 @@
     letter-spacing: -0.03em;
     text-transform: uppercase;
     color: #1D1A23;
-    max-width: 470px;
+    // max-width: 470px;
     margin-bottom: 35px;
+    font-size: calc(24px + 48 * (100vw / 1440));
   }
   &-descr {
     font-weight: normal;
@@ -31,6 +39,7 @@
     line-height: 162%;
     letter-spacing: -0.015em;
     color: #1D1A23;
+    font-size: calc(12px + 6 * (100vw / 1440));
     p {
       max-width: 492px;
     }
