--- a/src/sass/blocks/_exp.scss
+++ b/src/sass/blocks/_exp.scss
@@ -8,23 +8,26 @@
     align-items: center;
   }
   &-text {
-    max-width: 686px;
+    max-width: 1200px;
   }
   &-image {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     img {
-      max-width: 670px;
+      max-width: 1101.31px;
     }
   }
   &-title {
     font-weight: 600;
-    font-size: 72px;
     line-height: 111%;
     letter-spacing: -0.03em;
     text-transform: uppercase;
     color: #1D1A23;
     // max-width: 470px;
     margin-bottom: 35px;
-    font-size: calc(24px + 48 * (100vw / 1440));
+    font-size: calc(38px + 80 * (100vw / 2367));
+    // font-size: calc(16px + 10 * (100vw / 2367));
   }
   &-descr {
     font-weight: normal;
@@ -32,9 +35,9 @@
     line-height: 162%;
     letter-spacing: -0.015em;
     color: #1D1A23;
-    font-size: calc(12px + 6 * (100vw / 1440));
+    font-size: calc(16px + 14 * (100vw / 2367));
     p {
-      max-width: 492px;
+      max-width: 855px;
     }
   }
 }
