--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,5 +21,29 @@ span {
     padding-left: 40px;
     padding-right: 40px;
 }
+
+
 @import 'blocks/header';
 @import 'blocks/exp';
+@import 'blocks/partner';
+
+
+
+
+@media (max-width: 767px){
+    .nav {
+        &-list {
+            &-item {
+                a {
+                    font-size: calc(16px + (10 + 10 * 0.7) * ((100vw - 320px) / 2367));
+                }
+            }
+        }
+    }
+    .exp {
+        &-title {
+            font-size: calc(38px + (80 + 80 * 0.7) * ((100vw - 320px) / 2367));
+        }
+    }
+   }
+@import 'base/media';
