--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -59,8 +59,8 @@
   }
 }
 .header {
-  height: 100vh;
   padding-top: 267px;
+  padding-bottom: 431px;
   &-wrap {
     display: flex;
     justify-content: center;
