--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,11 +25,21 @@ span {
     width: 100%;
     padding-left: 240px;
     padding-right: 240px;
+    &-work {
+        padding-left: 283px;
+        padding-right: 283px;
+    }
 }
+
 @import 'blocks/header';
 @import 'blocks/exp';
 @import 'blocks/partner';
 @import 'blocks/focus';
+@import 'blocks/skills';
+@import 'blocks/work';
+@import 'blocks/boost';
+@import 'blocks/discuss';
+@import 'blocks/footer';
 
 
 
