--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -1,6 +1,89 @@
-
-
-
+//?
+@media (max-width: 2100px) {  
+  .exp {
+    &-image {
+      img {
+        max-width: 755px;
+      }
+    }
+  }
+  .focus {
+    &-card {
+      padding: 240px 270px 250px 100px;;
+    }
+  }
+  .boost {
+    &-text {
+      height: 580px;
+    }
+    &-btn {
+      width: 419px;
+      height: 122px;
+      font-size: 28px;
+    }
+  }
+}
+@media (max-width: 1800px) {
+  .nav {
+    &-social {
+      &__link {
+      img {
+        max-width: 29px;
+      }
+    }
+    }
+  }
+  .partner {
+    &-card {
+      img {
+        max-width: 81%;
+      }
+    }
+  }
+  .focus {
+    &-card {
+      padding: 240px 250px 250px 70px;  
+    }
+    &-title {
+      max-width: 878px;
+    }
+  }
+  .boost {
+    &-text {
+      height: 540px;
+    }
+    &-btn {
+      font-size: 22px;
+      width: 319px;
+      height: 102px;
+    }
+  }
+  .discuss {
+    &-btn {
+      width: 356px;
+      height: 356px;
+      span {
+        width: 246px;
+        height: 246px;
+        font-size: 22px;
+        &::after { // внешний
+          width: 356px;
+          height: 356px;
+        }
+        &::before {
+          width: 302px;
+          height: 302px;
+        }
+      }
+    }
+  }
+  .footer {
+    &-name,
+    &-email {
+      font-size: 23px;
+    }
+  }
+}
 @media (max-width: 1920px) {
   .exp {
     &-image {
@@ -10,11 +93,16 @@
     }
   }
 }
-@media (max-width: 1440px) {
+
+@media (max-width: 1440px) { 
   .container-fluid {
     padding-left: 40px;
     padding-right: 40px;
 }
+  .container {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
   .nav {
     padding: 43px 0px 0px 0px;
     &-logo {
@@ -23,6 +111,7 @@
       }
     }
     &-list {
+      margin-left: 78px;
       &-item {
         margin-right: 69px;
         a {
@@ -46,23 +135,187 @@
   }
   .header {
     padding-top: 170px;
+    padding-bottom: 328px;
     &-title {
       font-size: calc(38px + 99 * (100vw / 2560));
+      margin-bottom: 20px;
     }
     h3 {
       font-size: calc(16px + 15 * (100vw / 2560));
     }
   }
   .exp {
+    margin-bottom: 193px;
     &-title {
-      font-size: calc(38px + 67 * (100vw / 2560));
+      font-size: calc(38px + 34 * (100vw / 1440));
+      max-width: 492px;
+      transform: translateY(0);
+    }
+    &-text {
+      margin-bottom: 50px;
     }
     &-descr {
-      font-size: calc(16px + 5 * (100vw / 2560));
+      font-size: calc(16px + 2 * (100vw / 1440));
+      margin-top: 36px;
+      p {
+        max-width: 492px;
+      }
+    }
+    &-image {
+      img {
+        max-width: 670px;
+        width: 100%;
+      }
+    }
+  }
+
+  .partner {
+    margin-bottom: 84px;
+    .container-fluid {
+      padding-left: 104px;
+      padding-right: 170px;
+    }
+    &-card {
+      img {
+        max-width: 78px;
+      }
+    }
+  }
+
+
+  .focus {
+    padding: 48px 40px 67px 40px;
+    &-title {
+      font-size: calc(32px + 18 * (100vw / 1440)); //!
+      max-width: 627px;
+    }
+    &-card {
+      padding: 125px 242px 192px 64px;
+    }
+    &-image {
+      img {
+        max-width: 132px;
+      }
+    }
+    &-btn {
+      max-width: 120px;
+      max-height: 120px;
+      span {
+        width: 36px;
+        height: 36px;
+      }
+      &::after {
+        width: 120px;
+        height: 120px;
+      }
+      &:before {
+        width: 76px;
+        height: 76px;
+      }
+    }
+  }
+  .skills {
+    &-card {
+      font-size: calc(24px + 12 * (100vw / 1440));
+    }
+  }
+
+  .work {
+    padding-top: 180px;
+    &-title {
+      font-size: calc(38px + 54 * (100vw / 1440));
+      margin-bottom: 56px;
+    }
+    &-item {
+      margin-bottom: 21px;
+    }
+    &-column {
+      margin-right: 20px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  .boost {
+    padding: 380px 0px 240px 0px;
+    &-title {
+      font-size: calc(38px + 54 * (100vw / 1440));
+      max-width: 944px;
+    }
+    &-descr {
+      font-size: calc(16px + 2 * (100vw / 1440));
+      p {
+        max-width: 576px;
+      }
+    }
+    &-btn {
+      width: 274px;
+      height: 80px;
+      font-size: 18px;
+    }
+    &-text {
+      height: 398px;
+    }
+  }
+  .discuss {
+    height: 500px;
+    &-wrap {
+      padding-top: 72px;
+      padding-right: 186px;
+    }
+    &-title {
+      font-size: calc(38px + 54 * (100vw / 1440));
+    }
+    &-btn {
+      width: 296px;
+      height: 296px;
+      span {
+        width: 216px;
+        height: 216px;
+        font-size: 22px;
+        &::after { // внешний
+          width: 296px;
+          height: 296px;
+        }
+        &::before {
+          width: 252px;
+          height: 252px;
+        }
+      }
+    }
+  }
+  .footer {
+    padding-bottom: 47px;
+    &-name {
+      font-size: 16px;
+    }
+    &-email {
+      font-size: 16px;
+      margin-right: 50px;
+    }
+    &-link {
+      margin-right: 40px;
+      svg {
+        width: 24px;
+      }
+      &-wrap {
+        
+      }
     }
   }
 }
+//?
+
+
+
 @media (max-width: 1400px) { //1200
+  .nav {
+    &-logo {
+      img {
+        width: 75%;
+      }
+    }
+  }
   .exp {
     margin-bottom: 197px;
     &-wrap {
@@ -78,26 +331,39 @@
       justify-content: center;
       align-items: center;
       img {
-        width: 75%;
+        width: 95%;
       }
     }
   }
   .patner {
     margin-bottom: 84px;
   }
+  .discuss {
+    &-wrap {
+      padding-right: 56px;
+    }
+  }
 
 }
 
 @media (max-width: 1200px) { //992
-  .nav {
-    &-social {
-      display: none;
+  .focus {
+    &-title {
+      max-width: 517px;
     }
-    &-logo {
+    &-card {
+      padding: 125px 112px 125px 64px;
+    }
+    &-image {
+      top: -50px;
+      right: -50px;
       img {
-        width: 75%;
+        max-width: 102px;
       }
     }
+  }
+  .boost {
+    padding: 250px 0 240px 0;
   }
 }
 
@@ -110,17 +376,60 @@
     }
   }
   .partner {
-    display: none;
+    // display: none;
   }
   .container-fluid {
-    padding-right: 16px;
-    padding-left: 16px;
+    padding-right: 16px!important;
+    padding-left: 16px!important;
+  }
+  .focus {
+    &-title {
+      max-width: 367px;
+    }
+    &-card {
+      padding: 105px 52px 105px 52px;
+    }
+  }
+  .work {
+    &-wrap {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    &-column {
+      margin: 0;
+    }
+    &-item {
+      &:last-child {
+        margin-bottom: 21px;
+      }
+    }
+  }
+  .boost {
+    padding: 150px 0 160px 0;
+  }
+  .discuss {
+    height: 620px;
+    &-wrap {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-right: 0;
+      padding-top: 52px;
+    }
+    &-title {
+      text-align: center;
+      margin-bottom: 50px;
+    }
   }
 }
 
 @media (max-width: 768px) { //576 
   .nav { 
     padding: 22px 0px 22px 0px;
+    &-toggle {
+      display: flex;
+    }
     &-logo {
       img {
         max-width: 152px;
@@ -128,12 +437,25 @@
     }
     &-list {
       display: none;
+      &__mob {
+        display: flex;
+      }
+    }
+    &-social {
+      display: none;
+      &__mob {
+        display: flex;
+      }
+    }
+    &-toggle {
+      width: 22px;
+      height: 22px;
     }
   }
   // adaptive text
   .header {
     &-title {
-      font-size: calc(37px + (100 + 100 * .7) * ((100vw - 320px)/ 2560));
+      font-size: calc(38px + (20 + 20 * .7) * ((100vw - 320px)/ 2560));
     }
     h3 {
       font-size: calc(16px + (16 + 16 * 0.7) * ((100vw - 320px) / 2560));
@@ -144,22 +466,153 @@
           font-size: calc(38px + (72 + 72 * 0.7) * ((100vw - 320px) / 2560));
       }
   }
-  // adaptive text end
+  .focus {
+    &-title {
+      text-align: center;
+      margin-top: 55px;
+      font-size: calc(28px + 18 * (100vw / 1440));
+    }
+    &-card {
+      flex-direction: column-reverse;
+      padding: 35px 32px 45px 32px;
+    }
+  }
+  .work {
+    padding-top: 100px;
+    &-title {
+      font-size: calc(32px + 43 * (100vw / 2560));
+    }
+  }
+  .boost {
+    padding: 110px 0 130px 0;
+    &-title {
+      font-size: calc(33px + 36 * (100vw / 2560));
+    }
+  }
+  .discuss {
+    &-title {
+      font-size: calc(34px + 16 * (100vw / 1440));
+    }
+  }
+  .footer {
+    &-wrap {
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+    }
+    &-social {
+      flex-direction: column;
+      margin-bottom: 40px;
+    }
+    &-email {
+      margin-right: 0;
+      margin-bottom: 40px;
+    }
+  }
+
 }
 @media (max-width: 576px)  { //320
+  .container,
+  .container-fluid {
+    padding-right: 16px;
+    padding-left: 16px;
+  }
   .nav {
     &-logo {
       img {
         max-width: 102px;
       }
     }
+    &-toggle {
+      span,
+      &::after,
+      &::before {
+        height: 2px;
+      }
+    }
+  }
+  .header {
+    padding: 100px 0px 118px 0px;
   }
   .exp {
+    margin-bottom: 55px;
     &-title {
       margin-bottom: 20px;
     }
     &-descr {
       font-size: 16px;
+      margin-top: 0px;
+    }
+    &-image {
+      img {
+        width: 328px;
+        height: 349px;
+      }
     }
   }
+  .partner {
+    margin-bottom: 37px;
+    &-card {
+      img {
+        max-width: 55px;
+      }
+    }
+  }
+  .focus {
+    padding: 24px 16px 24px 17px;
+    &-card {
+      padding: 51px 16px 58px 16px;
+    }
+  }
+  .skills {
+    padding-top: 36px;
+    &-wrap {
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+    &-card {
+      margin: 0 33px 31px 0;
+      font-size: 24px;
+    }
+  }
+  .work {
+    padding-top: 33px;
+    &-title {
+      margin-bottom: 36px;
+    }
+  }
+  .boost {
+    padding: 89px 0px 70px 0px;
+    &-text {
+      height: 354px;
+    }
+    &-btn {
+      height: 80px;
+      width: 100%;
+    }
+  }
+  .footer {
+    padding-bottom: 28px;
+  }
+
+  .menu {
+    &-btn {
+      width: 100%;
+      height: 80px;
+    }
+    .container-fluid {
+      margin: 0;
+    }
+    .nav {
+      &-social {
+        &__link {
+          img {
+            max-width: 32px;
+            width: 32px;
+          }
+        }
+      }
+    }
+  }
+
 }
