--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -13,5 +13,6 @@
     letter-spacing: -0.01em;
     text-transform: uppercase;
     color: #918C9C;
+    font-size: calc(24px + 36 * (100vw / 2560));
   }
 }
