--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -19,6 +19,7 @@
     &-btn {
       width: 419px;
       height: 122px;
+      min-height: 10px;
       font-size: 28px;
     }
   }
@@ -216,7 +217,7 @@
   }
   .skills {
     &-card {
-      font-size: calc(24px + 12 * (100vw / 1440));
+      font-size: calc(20px + 16 * (100vw / 1440));
     }
   }
 
@@ -426,9 +427,11 @@
 
 @media (max-width: 768px) { //576 
   .nav { 
-    padding: 22px 0px 22px 0px;
+    padding: 29px 0 0px 0;
     &-toggle {
       display: flex;
+      width: 22px;
+      height: 18px;
     }
     &-logo {
       img {
@@ -447,18 +450,14 @@
         display: flex;
       }
     }
-    &-toggle {
-      width: 22px;
-      height: 22px;
-    }
   }
   // adaptive text
   .header {
     &-title {
-      font-size: calc(38px + (20 + 20 * .7) * ((100vw - 320px)/ 2560));
+      font-size: calc(34px + (106 + 106 * .7) * ((100vw / 320)/ 2560));
     }
     h3 {
-      font-size: calc(16px + (16 + 16 * 0.7) * ((100vw - 320px) / 2560));
+      font-size: calc(14px + (18 + 18 * 0.7) * ((100vw - 320px) / 2560));
     }
   }
   .exp {
@@ -470,11 +469,16 @@
     &-title {
       text-align: center;
       margin-top: 55px;
-      font-size: calc(28px + 18 * (100vw / 1440));
+      font-size: calc(28px + (50 + 50 * 0.7) * ((100vw - 320px) / 2560));
     }
     &-card {
       flex-direction: column-reverse;
       padding: 35px 32px 45px 32px;
+    }
+  }
+  .skills {
+    &-card {
+      font-size: calc(20px + (40 + 40 * 0.7) * ((100vw - 320px) / 2560));
     }
   }
   .work {
@@ -520,7 +524,8 @@
   .nav {
     &-logo {
       img {
-        max-width: 102px;
+        max-width: 98px;
+        width: 100%;
       }
     }
     &-toggle {
@@ -532,10 +537,13 @@
     }
   }
   .header {
-    padding: 100px 0px 118px 0px;
+    padding: 93px 0 113px 0;
+    &-name {
+      margin-bottom: 20px;
+    }
   }
   .exp {
-    margin-bottom: 55px;
+    margin-bottom: 38px;
     &-title {
       margin-bottom: 20px;
     }
@@ -543,56 +551,117 @@
       font-size: 16px;
       margin-top: 0px;
     }
+    &-text {
+      margin-bottom: 0;
+    }
     &-image {
       img {
-        width: 328px;
-        height: 349px;
+        width: 288px;
       }
     }
   }
   .partner {
-    margin-bottom: 37px;
+    margin-bottom: 36px;
+    &-wrap {
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+  }
     &-card {
+      width: 92px;
+      margin-bottom: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:last-child {
+        margin-right: 0;
+      }
       img {
-        max-width: 55px;
+        max-width: 58px;
       }
     }
+  }
+  .mb0 {
+    margin-bottom: 0;
   }
   .focus {
     padding: 24px 16px 24px 17px;
     &-card {
-      padding: 51px 16px 58px 16px;
+      padding: 45px 13px 36px 12px;
+    }
+    &-title {
+      margin-top: 47px;
     }
   }
   .skills {
-    padding-top: 36px;
+    padding-top: 30px;
     &-wrap {
       flex-wrap: wrap;
-      justify-content: flex-start;
+      justify-content: space-between;
     }
     &-card {
-      margin: 0 33px 31px 0;
-      font-size: 24px;
+      margin: 0 14px 30px 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
   .work {
-    padding-top: 33px;
+    padding-top: 28px;
+    &-item {
+      height: 380px;
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
     &-title {
       margin-bottom: 36px;
     }
   }
   .boost {
-    padding: 89px 0px 70px 0px;
+    padding: 43px 0 64px 0;
     &-text {
-      height: 354px;
+      height: 359px;
     }
     &-btn {
       height: 80px;
       width: 100%;
     }
   }
+  .discuss {
+    height: 470px;
+    &-wrap {
+      padding-top: 33px;
+    }
+    &-title {
+      margin-bottom: 25px;
+    }
+    &-btn {
+      width: 270px;
+      height: 270px;
+      span {
+        width: 198px;
+        height: 198px;
+        font-size: 22px;
+        &::after { // внешний
+          width: 270px;
+          height: 270px;
+        }
+        &::before {
+          width: 230px;
+          height: 230px;
+        }
+      }
+    }
+  }
   .footer {
     padding-bottom: 28px;
+    &-email,
+    &-social {
+      margin-bottom: 33px;
+    }
   }
 
   .menu {
@@ -603,8 +672,16 @@
     .container-fluid {
       margin: 0;
     }
+    &-social {
+      &-wrap {
+        flex-direction: column;
+      }
+    }
     .nav {
       &-social {
+        &__mob {
+          margin-bottom: 32px;
+        }
         &__link {
           img {
             max-width: 32px;
@@ -614,5 +691,4 @@
       }
     }
   }
-
 }
