--- a/src/sass/blocks/_boost.scss
+++ b/src/sass/blocks/_boost.scss
@@ -42,6 +42,7 @@
     color: #131218;
     width: 449px;
     height: 132px;
+    min-height: 132px;
     border: 2px solid #131218;
     border-radius: 70.6813px;
   }
