--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,11 @@ ul {
     margin: 0;
     padding: 0;
 }
+a {
+    &:hover {
+        text-decoration: none;
+    }
+}
 span {
     padding: 0;
     margin: 0;
