--- a/src/sass/blocks/_boost.scss
+++ b/src/sass/blocks/_boost.scss
@@ -55,6 +55,8 @@
     &_2 {
       background-color: #2F2CE9;
       transition: .5s cubic-bezier(.42,.0,.58,1);
+      transform: translateX(-10px);
+      left: -100px!important;
     }
     &_1,
     &_2 {
@@ -64,7 +66,7 @@
       top: 0;
       left: 0;
       z-index: -1;
-      border-radius: 70.6813px;
+      border-radius: 80.6813px;
     }
     &::after {
       left: 12%;
@@ -83,6 +85,7 @@
     }
     &:hover {
       color: #fff;
+      border: 1px solid transparent;
       transition: .32s cubic-bezier(.25,.1,.25,1);
       &::before,
       &::after {
@@ -91,7 +94,39 @@
       .boost-btn_1,
       .boost-btn_2 {
         width: 100%;
+        // animation: log 1s cubic-bezier(.25,.1,.25,1);
+        // animation-iteration-count: 3;
+      }
+      .boost-btn_1 {
+        // animation: loga 1s cubic-bezier(.25,.1,.25,1) normal;
+      }
+      .boost-btn_2 {
+        // animation: log 1s cubic-bezier(.25,.1,.25,1) normal;
+        // animation-delay: 0.1s;
+        transform: translateX(0px);
+        left: 0!important;
       }
     }
   }
 }
+
+// @keyframes log {
+//   0% {
+//     width: 0%;
+//     transition: .5s cubic-bezier(.42,.0,.58,1);
+//   }
+//   100% {
+//     width: 100%;
+//     transition: .5s cubic-bezier(.42,.0,.58,1);
+//   }
+// }
+// @keyframes loga {
+//   0% {
+//     width: 0%;
+//     transition: .7s cubic-bezier(.42,.0,.58,1);
+//   }
+//   100% {
+//     width: 100%;
+//     transition: .7s cubic-bezier(.42,.0,.58,1);
+//   }
+// }
