--- a/src/sass/blocks/_boost.scss
+++ b/src/sass/blocks/_boost.scss
@@ -48,16 +48,6 @@
     position: relative;
     transition: .3s all;
     overflow: hidden;
-    &_1 {
-      background-color: #030313;
-      transition: .4s cubic-bezier(.42,.0,.58,1);
-    }
-    &_2 {
-      background-color: #2F2CE9;
-      transition: .5s cubic-bezier(.42,.0,.58,1);
-      transform: translateX(-10px);
-      left: -100px!important;
-    }
     &_1,
     &_2 {
       width: 0%;
@@ -67,6 +57,15 @@
       left: 0;
       z-index: -1;
       border-radius: 80.6813px;
+    }
+    &_1 {
+      background-color: #030313;
+      transition: .54s cubic-bezier(.42,.0,.58,1);
+    }
+    &_2 {
+      background-color: #2f2ce9;
+      transition: 0.55s cubic-bezier(.42,0,.58,1);
+      left: -270px;
     }
     &::after {
       left: 12%;
@@ -86,7 +85,7 @@
     &:hover {
       color: #fff;
       border: 1px solid transparent;
-      transition: .32s cubic-bezier(.25,.1,.25,1);
+      transition: .32s color cubic-bezier(.25,.1,.25,1), .5s border ease;
       &::before,
       &::after {
         opacity: 1;
@@ -103,8 +102,7 @@
       .boost-btn_2 {
         // animation: log 1s cubic-bezier(.25,.1,.25,1) normal;
         // animation-delay: 0.1s;
-        transform: translateX(0px);
-        left: 0!important;
+        left: 0
       }
     }
   }
