--- a/src/sass/blocks/_boost.scss
+++ b/src/sass/blocks/_boost.scss
@@ -84,7 +84,7 @@
     }
     &:hover {
       color: #fff;
-      border: 1px solid transparent;
+      border: 1px solid #2f2ce9;
       transition: .32s color cubic-bezier(.25,.1,.25,1), .4s border cubic-bezier(.25,.1,.25,1);
       &::before,
       &::after {
