--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -36,6 +36,25 @@ span {
     }
 }
 
+// .QOverlay {
+//     background-color: #000000;
+//     z-index: 9999;
+// }
+// .QLoader {
+//     background-color: #CCCCCC;
+//     height: 1px;
+// }
+
+// .QAmt {
+//     color:#333333;
+//     font-family:"Trebuchet MS",Arial,Helvetica,sans-serif;
+//     font-size:40px;
+//     font-weight:bold;
+//     line-height:50px;
+//     height:50px;
+//     width:100px;
+//     margin:-60px 0 0 -50px;
+// }
 @import 'blocks/header';
 @import 'blocks/exp';
 @import 'blocks/partner';
