--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -35,26 +35,86 @@ span {
         padding-right: 283px;
     }
 }
+.preloader {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background: #131218;
+    padding: 66px 40px 40px 40px;
+    border-left: 0px solid #130EFF;
+    &:hover {
 
-// .QOverlay {
-//     background-color: #000000;
-//     z-index: 9999;
-// }
-// .QLoader {
-//     background-color: #CCCCCC;
-//     height: 1px;
-// }
+    }
+    &-none {
+        // animation-name: preloader-width, preloader-border;
+        // animation-duration: .8s, 2s;
+        // animation-delay: 0, 0.2s;
+        // animation-timing-function: cubic-bezier(.25,.1,.25,1),cubic-bezier(-0.5,-0.03, 0.46,1.1);
+        // animation-iteration-count: infinite, infinite;
+        // animation-fill-mode: forwards;
+        border-left: 2000px solid #130EFF;
+        transform: translateX(100%);
+        transition-property: transform, border-left;
+        transition-delay: 0s, 0.06s;
+        transition-duration: 1.4s, 1.46s;
+        transition-timing-function: cubic-bezier(.5,-0.03,.46,1.1), cubic-bezier(.5,-0.03,.46,1.1);
+    }
+    &-none {
+        .preloader {
+            width: 0%;
+            &-title,
+            &-timer {
+                opacity: 0;
+            }
+        }
+    }
+    &-title {
+        max-width: 515px;
+        font-weight: 600;
+        font-size: 92px;
+        line-height: 111%;
+        letter-spacing: -0.02em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        transition: .2s all;
+    }
+    &-timer {
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 111%;
+        letter-spacing: -0.02em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        position: absolute;
+        bottom: 40px;
+        right: 40px;
+        transition: .2s all;
+    }
+}
 
-// .QAmt {
-//     color:#333333;
-//     font-family:"Trebuchet MS",Arial,Helvetica,sans-serif;
-//     font-size:40px;
-//     font-weight:bold;
-//     line-height:50px;
-//     height:50px;
-//     width:100px;
-//     margin:-60px 0 0 -50px;
-// }
+@keyframes preloader-width {
+    from {
+        // width: 100%;
+        transform: translateX(0);
+    }
+
+    to {
+        // width: 0%;
+        transform: translateX(100%);
+    }
+}
+@keyframes preloader-border {
+    from {
+        border-left: 0px solid #130EFF;
+    }
+
+    to {
+        border-left: 2000px solid #130EFF;
+    }
+}
 @import 'blocks/header';
 @import 'blocks/exp';
 @import 'blocks/partner';
