--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -92,6 +92,11 @@
       &:last-child {
         margin-right: 0;
       }
+      &:hover {
+        a {
+          
+        }
+      }
       a {
         font-weight: normal;
         font-size: 26.3px;
