--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -36,16 +36,48 @@ span {
     }
 }
 .text__animation_1 {
-    transform: rotate(4deg) translateY(10px);
+    transform: rotate(2deg) translateY(2px);
+    transform-origin: 0 50%;
     position: relative;
+    transition: .4s cubic-bezier(0.25, 0.1, 0.25, 1);
+    opacity: 0;
 }
+.text__animation_2 {
+    transform: rotate(4deg) translateY(4px);
+    transform-origin: 0 50%;
+    position: relative;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-delay: .3s;
+    transition-duration: .77s;
+    &:before {
+        content: '';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        opacity: 1;
+        visibility: visible;
+        transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+        transition-delay: .2s;
+        transition-duration: .77s;
+        background-color: #fff;
+    }
+}
+
 .text-anim {
     transform: rotate(0deg) translateY(0px);
-    transition: 1s all;
+    transform-origin: 0 50%;
+    opacity: 1;
+    &:before {
+        bottom: -100%;
+    }
 }
 .opacity-animate {
     opacity: 1!important;
-    transition: .5s all;
+    transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition-delay: .2s;
+    transition-duration: .6s;
 }
 .preloader {
     width: 100%;
@@ -61,12 +93,6 @@ span {
 
     }
     &-none {
-        // animation-name: preloader-width, preloader-border;
-        // animation-duration: .8s, 2s;
-        // animation-delay: 0, 0.2s;
-        // animation-timing-function: cubic-bezier(.25,.1,.25,1),cubic-bezier(-0.5,-0.03, 0.46,1.1);
-        // animation-iteration-count: infinite, infinite;
-        // animation-fill-mode: forwards;
         border-left: 2000px solid #130EFF;
         transform: translateX(100%);
         transition-property: transform, border-left;
@@ -109,12 +135,10 @@ span {
 
 @keyframes preloader-width {
     from {
-        // width: 100%;
         transform: translateX(0);
     }
 
     to {
-        // width: 0%;
         transform: translateX(100%);
     }
 }
