--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -36,7 +36,7 @@ span {
     }
 }
 .text__animation_1 {
-    transform: rotate(2deg) translateY(2px);
+    transform: rotate(2deg) translateY(30px);
     transform-origin: 0 50%;
     position: relative;
     transition: .4s cubic-bezier(0.25, 0.1, 0.25, 1);
@@ -47,7 +47,7 @@ span {
     transform-origin: 0 50%;
     position: relative;
     transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-delay: .3s;
+    transition-delay: .35s;
     transition-duration: .77s;
     &:before {
         content: '';
@@ -60,7 +60,7 @@ span {
         visibility: visible;
         transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
         transition-delay: .2s;
-        transition-duration: .77s;
+        transition-duration: .90s;
         background-color: #fff;
     }
 }
@@ -160,6 +160,7 @@ span {
 @import 'blocks/boost';
 @import 'blocks/discuss';
 @import 'blocks/footer';
+@import 'blocks/main-404';
 
 
 
