--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -420,3 +420,404 @@
     }
 }
 
+@media (max-width: 992px) { //768 
+  .exp {
+    &-image {
+      img {
+        width: 100%;
+      }
+    }
+  }
+  .partner {
+    // display: none;
+  }
+  .container-fluid {
+    padding-right: 16px!important;
+    padding-left: 16px!important;
+  }
+  .focus {
+    &-title {
+      max-width: 367px;
+    }
+    &-card {
+      padding: 105px 52px 105px 52px;
+    }
+  }
+  .work {
+    &-wrap {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    &-column {
+      margin: 0;
+    }
+    &-item {
+      &:last-child {
+        margin-bottom: 21px;
+      }
+    }
+  }
+  .boost {
+    padding: 150px 0 160px 0;
+  }
+  .discuss {
+    height: 620px;
+    &-wrap {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-right: 0;
+      padding-top: 52px;
+    }
+    &-title {
+      text-align: center;
+      margin-bottom: 50px;
+    }
+  }
+  .footer {
+    &-dev {
+      font-size: 13px;
+      margin-left: 25px;
+    }
+    &-email {
+      margin-right: 30px;
+    }
+  }
+  .preloader {
+    padding: 26px 20px 30px 20px;
+    &-title {
+      font-size: 62px;
+      line-height: 110%;
+    }
+    &-timer {
+      font-size: 28px;
+      font-size: 24px;
+      bottom: 20px;
+      right: 20px;
+    }
+    }
+}
+
+@media (max-width: 768px) { //576 
+  .nav { 
+    padding: 29px 0 0px 0;
+    &-toggle {
+      display: flex;
+      width: 22px;
+      height: 18px;
+    }
+    &-logo {
+      img {
+        max-width: 152px;
+      }
+    }
+    &-list {
+      display: none;
+      &__mob {
+        display: flex;
+      }
+    }
+    &-social {
+      display: none;
+      &__mob {
+        display: flex;
+      }
+    }
+  }
+  // adaptive text
+  .header {
+    &-title {
+      font-size: calc(34px + (106 + 106 * .7) * ((100vw / 320)/ 2560));
+    }
+    h3 {
+      font-size: calc(14px + (18 + 18 * 0.7) * ((100vw - 320px) / 2560));
+    }
+  }
+  .exp {
+      &-title {
+          font-size: calc(38px + (72 + 72 * 0.7) * ((100vw - 320px) / 2560));
+      }
+  }
+  .focus {
+    &-title {
+      text-align: center;
+      margin-top: 55px;
+      font-size: calc(28px + (50 + 50 * 0.7) * ((100vw - 320px) / 2560));
+    }
+    &-card {
+      flex-direction: column-reverse;
+      padding: 35px 32px 45px 32px;
+    }
+  }
+  .skills {
+    &-card {
+      font-size: calc(20px + (40 + 40 * 0.7) * ((100vw - 320px) / 2560));
+    }
+  }
+  .work {
+    padding-top: 100px;
+    &-title {
+      font-size: calc(32px + 43 * (100vw / 2560));
+    }
+  }
+  .boost {
+    padding: 110px 0 130px 0;
+    &-title {
+      font-size: calc(33px + 36 * (100vw / 2560));
+    }
+  }
+  .discuss {
+    &-title {
+      font-size: calc(34px + 16 * (100vw / 1440));
+    }
+  }
+  .footer {
+    &-wrap {
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+    }
+    &-social {
+      flex-direction: column;
+      margin-bottom: 40px;
+    }
+    &-email {
+      margin-right: 0;
+      margin-bottom: 40px;
+    }
+  }
+
+}
+@media (max-width: 576px)  { //320
+  .container,
+  .container-fluid {
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+  .nav {
+    &-logo {
+      img {
+        max-width: 98px;
+        width: 100%;
+      }
+    }
+    &-toggle {
+      span,
+      &::after,
+      &::before {
+        height: 2px;
+      }
+    }
+  }
+  .header {
+    padding: 93px 0 113px 0;
+    &-name {
+      margin-bottom: 20px;
+    }
+  }
+  .exp {
+    margin-bottom: 38px;
+    &-title {
+      margin-bottom: 20px;
+    }
+    &-descr {
+      font-size: 16px;
+      margin-top: 0px;
+    }
+    &-text {
+      margin-bottom: 0;
+    }
+    &-image {
+      img {
+        width: 288px;
+      }
+    }
+  }
+  .partner {
+    margin-bottom: 36px;
+    &-wrap {
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+  }
+    &-card {
+      width: 92px;
+      margin-bottom: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:last-child {
+        margin-right: 0;
+      }
+      img {
+        max-width: 58px;
+      }
+    }
+  }
+  .mb0 {
+    margin-bottom: 0;
+  }
+  .focus {
+    padding: 24px 16px 24px 17px;
+    &-card {
+      padding: 45px 13px 36px 12px;
+    }
+    &-title {
+      margin-top: 47px;
+    }
+  }
+  .skills {
+    padding-top: 30px;
+    &-wrap {
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    &-card {
+      margin: 0 14px 30px 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  .work {
+    padding-top: 28px;
+    &-item {
+      height: 380px;
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+    &-title {
+      margin-bottom: 36px;
+    }
+  }
+  .boost {
+    padding: 43px 0 64px 0;
+    &-text {
+      height: 359px;
+    }
+    &-btn {
+      height: 80px;
+      width: 100%;
+    }
+  }
+  .discuss {
+    height: 470px;
+    &-wrap {
+      padding-top: 33px;
+    }
+    &-title {
+      margin-bottom: 25px;
+    }
+    &-btn {
+      width: 270px;
+      height: 270px;
+      height: 296px;
+      &:hover {
+        .discuss {
+          &-btn_1, &-btn_2, &-btn_3 {
+            width: 193px;
+            height: 193px;
+          }
+        }
+      }
+      &_hover {
+        width: 198px;
+        height: 198px;
+        font-size: 22px;
+        &::after { // внешний
+          width: 270px;
+          height: 270px;
+        }
+        &::before {
+          width: 230px;
+          height: 230px;
+        }
+      }
+    }
+  }
+  .footer {
+    padding-bottom: 28px;
+    &-email,
+    &-social {
+      margin-bottom: 33px;
+    }
+    &-dev {
+      margin-bottom: 20px;
+      margin-left: 0;
+      font-size: 15px;
+    }
+    &-block-wrap {
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .menu {
+    &-btn {
+      width: 100%;
+      height: 80px;
+    }
+    .container-fluid {
+      margin: 0;
+    }
+    &-social {
+      &-wrap {
+        flex-direction: column;
+      }
+    }
+    .nav {
+      &-social {
+        &__mob {
+          margin-bottom: 32px;
+        }
+        &__link {
+          svg {
+            max-width: 32px;
+            width: 32px;
+          }
+        }
+      }
+    }
+  }
+
+  .main-404 {
+    padding: 134px 0px;
+    &__title {
+      font-size: 64px;
+      margin-bottom: 6px;
+    }
+    &__subtitle {
+      font-size: 14px;
+      margin-bottom: 91px;
+    }
+    &__btn {
+      font-size: 18px;
+      width: 288px;
+      height: 80px;
+      border: 1px solid #131218;
+      border-radius: 43px;
+    }
+    
+  }
+
+  .preloader {
+    padding: 10px 15px 10px 15px;
+    &-title {
+      font-size: 41px;
+      max-width: 365px;
+    }
+    &-timer {
+      font-size: 20px;
+      bottom: 10px;
+      right: 15px;
+    }
+  }
+  
+
+  
+}
