--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -43,12 +43,12 @@ span {
     opacity: 0;
 }
 .text__animation_2 {
-    transform: rotate(4deg) translateY(4px);
+    transform: rotate(1deg) translateY(2px);
     transform-origin: 0 50%;
     position: relative;
     transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-    transition-delay: .35s;
-    transition-duration: .77s;
+    transition-delay: .15s;
+    transition-duration: .85s;
     &:before {
         content: '';
         width: 100%;
@@ -59,9 +59,9 @@ span {
         opacity: 1;
         visibility: visible;
         transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-        transition-delay: .2s;
+        transition-delay: .15s;
         transition-duration: .90s;
-        background-color: #fff;
+        background: #131218;
     }
 }
 
@@ -86,11 +86,18 @@ span {
     top: 0;
     left: 0;
     z-index: 1000;
-    background: #131218;
+    background: #FFF;
     padding: 66px 40px 40px 40px;
     border-left: 0px solid #130EFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &:hover {
 
+    }
+    &-card {
+        background: #131218;
+        padding: 50px 61px;
     }
     &-none {
         border-left: 2000px solid #130EFF;
